GPv3: Connected Only option not working for proportional editing in edit mode #116349

Closed
opened 2023-12-19 15:41:01 +01:00 by Simon Thommes · 1 comment
Member

System Information
Operating system: Linux-6.6.7-gentoo-x86_64-AMD_Ryzen_9_5950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI
Graphics card: NVIDIA RTX A6000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 545.29.06

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-12-19 00:09, hash: 69d22a42d06f
Worked: (newest version of Blender that worked as expected)

Short description of error
Proportional editing when editing the curve points does not work with the Connected Only option enabled for curves drawn with GPv3.

Exact steps for others to reproduce the error

  • create GPv3 primitive
  • draw new line
  • go to edit mode
  • turn on proportional editing with Connected Only
  • try to move a point on the newly drawn line
**System Information** Operating system: Linux-6.6.7-gentoo-x86_64-AMD_Ryzen_9_5950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI Graphics card: NVIDIA RTX A6000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 545.29.06 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-12-19 00:09, hash: `69d22a42d06f` Worked: (newest version of Blender that worked as expected) **Short description of error** Proportional editing when editing the curve points does not work with the `Connected Only` option enabled for curves drawn with GPv3. **Exact steps for others to reproduce the error** - create GPv3 primitive - draw new line - go to edit mode - turn on proportional editing with `Connected Only` - try to move a point on the newly drawn line
Simon Thommes added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2023-12-19 15:41:02 +01:00
Simon Thommes added this to the Grease Pencil project 2023-12-19 15:41:11 +01:00
Germano Cavalcante added
Module
Grease Pencil
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-12-19 21:55:36 +01:00

I can confirm.

I believe the fix should be in createTransGreasePencilVerts. There it would be necessary to correct tc.data_len first and then how the TransData are filled in curve_populate_trans_data_structs.

Maybe related to:
#67918: Grease Pencil Proportional Edit "Connected Only" fails to delimit unconnected strokes if they are selected
#80992: Connected Only option of Proportional Editing in Particle Edit mode doesn't work

I can confirm. I believe the fix should be in `createTransGreasePencilVerts`. There it would be necessary to correct `tc.data_len` first and then how the TransData are filled in `curve_populate_trans_data_structs`. Maybe related to: #67918: Grease Pencil Proportional Edit "Connected Only" fails to delimit unconnected strokes if they are selected #80992: Connected Only option of Proportional Editing in Particle Edit mode doesn't work
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-25 11:40:12 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#116349
No description provided.