Fix: #116349: `Connected Only` not working for proportional editing

The problem was created in 78d9267a56c2b166aff9913115d05594ce5e632c

The problem was that `return` would skip the rest of the segment.

Pull Request: https://projects.blender.org/blender/blender/pulls/116523